Fix CI: build Docker image from app directory

--- a/.github/workflows/ci-ecr.yml
+++ b/.github/workflows/ci-ecr.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t enterprise-devops-app:${{ github.sha }} .
+          docker build -t enterprise-devops-app:${{ github.sha }} ./app
 
       - name: Tag Docker image
         run: |
