Fix CI: Added comment for the steps performed in the ecr file

--- a/.github/workflows/ci-ecr.yml
+++ b/.github/workflows/ci-ecr.yml
@@ -1,3 +1,9 @@
+## This file perform the following action
+#       Git push → GitHub Actions
+#       → Docker build
+#       → AWS auth via IAM
+#       → Docker push to ECR
+
 name: CI - Build & Push to ECR
 
 on:
